force-app/main/default/objects/Role_License__c.object
<CustomObject>
    <description>Stores the license information grouped by Role for each Business Unit.</description>
    <fields>
        <fullName>Parent_Business_Unit__c</fullName>
        <description>Associates Business License custom object with this object.</description>
        <label>Parent Business Unit</label>
        <referenceTo>Business_License__c</referenceTo>
        <relationshipLabel>Unit Licenses</relationshipLabel>
        <relationshipName>Role_Licenses_MD</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Stores the reason for change to support the trigger that checks the status of Licenses.</description>
        <label>Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unit_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unit License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Business_Unit__c</columns>
        <columns>User_Lookup__c</columns>
        <columns>Status__c</columns>
        <columns>Role__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Parent_Education</fullName>
        <columns>NAME</columns>
        <columns>Parent_Business_Unit__c</columns>
        <columns>User_Lookup__c</columns>
        <columns>Status__c</columns>
        <columns>Role__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Business_Unit__c</field>
            <operation>contains</operation>
            <value>Education</value>
        </filters>
        <label>Parent Education</label>
    </listViews>
    <nameField>
        <displayFormat>UL-{00000}</displayFormat>
        <label>Unit License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>